<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chatter</string>
    <string name="content_empty">Content can not be empty!</string>
    <string name="enter">Start Chat</string>
    <string name="scan">Scan IP</string>
    <string name="click_to_scan">Click to scan all the available IP</string>
    <string name="failed_to_get_ip">Failed to get IP</string>
    <string name="available_ip">Available IP:\n</string>
    <string name="local_ip">Local IP:</string>
    <string name="connect_to">Connect to %s</string>
    <string name="time_passed">Time Passed: </string>
    <string name="wifi_off">Wifi off line!</string>
    <string name="failed_to_listen">failed to listen for message</string>
    <string name="failed_to_send_message">Failed to send message!</string>
</resources>