<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/intro_background_2"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <ImageView
            android:id="@+id/iv_rada_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/scanner_bg" />

        <ImageView
            android:id="@+id/iv_rada_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/introduce_rada_scan" />

        <EditText
            android:id="@+id/edi_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/edi_ip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:padding="5dp" >

            <RelativeLayout style="@style/base_layout" >

                <TextView
                    android:id="@+id/tv_local_ip"
                    style="@style/base_layout"
                    android:text="@string/local_ip" />

                <TextView
                    android:id="@+id/tv_time_passed"
                    style="@style/base_layout"
                    android:layout_alignParentRight="true"
                    android:text="@string/time_passed"
                    android:visibility="gone" />
            </RelativeLayout>

            <TextView
                style="@style/base_layout"
                android:text="@string/available_ip"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/lv_ip"
                style="@style/base_layout"
                android:cacheColorHint="@android:color/transparent"
                android:divider="@null"
                android:fadingEdge="none"
                android:listSelector="@null" >
            </ListView>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_bottom_bg" >

        <RelativeLayout style="@style/base_layout" >

            <ImageButton
                android:id="@+id/iv_scan_btn"
                style="@style/base_layout"
                android:background="@drawable/scan_btn_bg" />

            <TextView
                style="@style/scan_text_style"
                android:clickable="false"
                android:text="@string/scan" />
        </RelativeLayout>

        <ImageButton
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/scan_btm_gap_line" />

        <RelativeLayout
            style="@style/base_layout"
            android:layout_alignParentRight="true" >

            <ImageButton
                android:id="@+id/iv_enter_btn"
                style="@style/base_layout"
                android:background="@drawable/scan_btn_bg" />

            <TextView
                style="@style/scan_text_style"
                android:text="@string/enter" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>